--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -77,7 +77,7 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 jlink.launcher=false
-jlink.launcher.name=PetCare
+jlink.launcher.name=AutismTutor
 main.class=TelaInicial
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
